[gd_scene load_steps=10 format=3 uid="uid://ctraf0w62v6a"]

[ext_resource type="Script" path="res://Main.gd" id="1_6ucbu"]
[ext_resource type="PackedScene" uid="uid://drxhbhxp4awp4" path="res://pitch_box.tscn" id="2_b0nyq"]
[ext_resource type="PackedScene" uid="uid://qol5e18o4eka" path="res://pitch_pointer.tscn" id="2_o5j5k"]
[ext_resource type="PackedScene" uid="uid://yb3fttgc707v" path="res://hud.tscn" id="4_lsjau"]
[ext_resource type="AudioStream" uid="uid://bgm7tj2byyyb8" path="res://audio/C_1st_pitch.wav" id="5_pux3x"]
[ext_resource type="AudioStream" uid="uid://ctenh5tu75hou" path="res://audio/E_2nd_pitch.wav" id="6_m7mwe"]
[ext_resource type="AudioStream" uid="uid://digmwlkqgk2js" path="res://audio/G_3rd_pitch.wav" id="7_p5ax4"]
[ext_resource type="AudioStream" uid="uid://cbg26mnkij54w" path="res://audio/B_4rth_pitch.wav" id="8_a1icr"]
[ext_resource type="AudioStream" uid="uid://csknsob3fap63" path="res://audio/D_5th_pitch.wav" id="9_e6xq6"]

[node name="Main" type="Node2D"]
script = ExtResource("1_6ucbu")

[node name="PitchPointer" parent="." instance=ExtResource("2_o5j5k")]
position = Vector2(200, 450)

[node name="Pitch1" parent="." instance=ExtResource("2_b0nyq")]
position = Vector2(0, 230)

[node name="Pitch2" parent="." instance=ExtResource("2_b0nyq")]
position = Vector2(0, 338)

[node name="Pitch3" parent="." instance=ExtResource("2_b0nyq")]
position = Vector2(0, 446)

[node name="Pitch4" parent="." instance=ExtResource("2_b0nyq")]
position = Vector2(0, 554)

[node name="Pitch5" parent="." instance=ExtResource("2_b0nyq")]
position = Vector2(0, 662)

[node name="HUD" parent="." instance=ExtResource("4_lsjau")]

[node name="Singing1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_e6xq6")

[node name="Singing2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_a1icr")

[node name="Singing3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_p5ax4")

[node name="Singing4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_m7mwe")

[node name="Singing5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pux3x")

[node name="Node" type="Node" parent="."]
